--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<name>shop</name>
 	<description>Backend for course work on web development</description>
 	<properties>
-		<java.version>11</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
